# demo-reflekt

./: .env  .envrc  .gitignore  README.md  ci_reflekt_segment.sh  ci_reflekt_segment_prod.sh  ci_reflekt_segment_qa.sh  environment.yml  pyproject.toml  reflekt_project.yml
.github/: pull_request_template.md
.github/workflows/: ci-reflekt-segment.yml  prod-ci-suite-reflekt-segment.yml  qa-ci-suite-reflekt-segment.yml
.reflekt/avo/: avo.json
artifacts/dbt/demo-reflekt/: README.md
artifacts/dbt/demo_reflekt/: README.md  dbt_project.yml
ci/: reflekt_segment_prod.sh  reflekt_segment_qa.sh
dbt-packages/reflekt_demo_segment/: README.md  dbt_project.yml
dbt_packages/reflekt_my_app_web/: dbt_project.yml
dbt_packages/reflekt_my_app_web/models/: reflekt_my_app_web__account_created.sql  reflekt_my_app_web__account_deleted.sql  reflekt_my_app_web__checkout_step_viewed.sql  reflekt_my_app_web__order_completed.sql  reflekt_my_app_web__pages.sql  reflekt_my_app_web__product_added.sql  reflekt_my_app_web__tracks.sql
dbt_packages/reflekt_patty_bar_web/: README.md  dbt_project.yml
dbt_packages/reflekt_patty_bar_web/models/: reflekt_patty_bar_web__account_created.sql  reflekt_patty_bar_web__account_created.yml  reflekt_patty_bar_web__account_deleted.sql  reflekt_patty_bar_web__account_deleted.yml  reflekt_patty_bar_web__checkout_step_viewed.sql  reflekt_patty_bar_web__checkout_step_viewed.yml  (+9 more)
tracking-plans/my-avo-plan/: plan.yml
tracking-plans/my-plan/: plan.yml
tracking-plans/my-segment-plan/: plan.yml  user-traits.yml
tracking-plans/patty-bar/: plan.yml
(+100 files in other folders)
