[tool.poetry]
name = "demo-reflekt"
version = "0.1.0"
description = ""
authors = ["Greg Clunies <greg.clunies@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_reflekt"}]

[tool.poetry.dependencies]
python = "^3.9"
reflekt = "^0.3.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
