[tool.poetry]
name = "reflekt-jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Greg Clunies <greg@reflekt-ci.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
reflekt = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
